@@ -12,6 +12,6 @@ proguard.config=${sdk.dir}/tools/proguard/proguard-android.txt:proguard-project.
 
 # Project target.
 target=android-21
-android.library.reference.1=..\\..\\..\\ae-apps-library\\library\\AeAppsLibrary
-android.library.reference.2=..\\..\\..\\..\\Android\\Android06\\android-support-v7-cardview
-android.library.reference.3=../../../../Android/Android06/android-support-v7-appcompat
+android.library.reference.1=..\\..\\..\\..\\Android\\Android06\\android-support-v7-cardview
+android.library.reference.2=..\\..\\..\\..\\Android\\Android06\\android-support-v7-appcompat
+android.library.reference.3=../../../ae-apps-library/library/AeAppsLibrary
